<?xml version="1.0" encoding="utf-8"?>

<layout >
    <data>
        <variable name="presenter" type="py.com.marcelo.pescaapp.presenter.FiscalizadoPresenter"/>
        <import type="android.view.View"/>
    </data>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_pescado">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/add_fiscalizado_fiscalia"
            android:text="@={presenter.item.fiscalia}"
            android:id="@+id/fiscalia"
            android:ems="10"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/equipo"
            android:hint="@string/add_fiscalizado_equipo"
            android:text="@={presenter.item.equipo}"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:layout_alignParentEnd="true"
            tools:ignore="TextFields"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnVariedad"
            android:adapter="@{presenter.adapter}"
            android:selectedItemPosition="@={presenter.selection}" />
        <!--app:selection="@{presenter.selection}"-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/add_fiscalizado_cantidad"
            android:text="@={presenter.cantidad}"
            android:id="@+id/edit_cantidad" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/add_fiscalizado_medida_mayor"
            android:text="@={presenter.medidaMayor}"
            android:id="@+id/medidaMayor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:text="@={presenter.item.observaciones}"
            android:hint="@string/add_fiscalizado_observaciones"
            android:id="@+id/observaciones" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="@{presenter.mostrarError ? View.VISIBLE : View.GONE}"
            android:text="@{presenter.errorMsg}"
            android:id="@+id/tvErrorMsg" />


    </LinearLayout>
</RelativeLayout>
    </layout>