<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/idFiscalizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_fiscalia"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/fiscalia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_name"
        android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




    <TextView
        android:id="@+id/equipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_name"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/variedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_name"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/cantidadList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/list_fiscalizado_cantidad"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/medidaMayor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_name"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/observaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/add_fiscalizado_name"
        android:textAppearance="?attr/textAppearanceListItem" />

</LinearLayout>
    </LinearLayout>